<resources>
    <string name="app_name" translatable="false">JFCars</string>
    <string name="titCrear">Create new Car</string>
    <string name="titEdit">Edit Car data</string>
    <string name="placa">License Plate</string>
    <string name="marca">Brand</string>
    <string name="modelo">Model</string>
    <string name="precio">Price</string>
    <string name="guardar">Save</string>
    <string name="marcaKia" translatable="false">Kia</string>
    <string name="marcaChevrolet" translatable="false">Chevrolet</string>
    <string name="marcaHyundai" translatable="false">Hyundai</string>
    <string-array name="marcas">
        <item>@string/marcaKia</item>
        <item>@string/marcaHyundai</item>
        <item>@string/marcaChevrolet</item>
    </string-array>
    <string name="modelo2016" translatable="false">2016</string>
    <string name="modelo2017" translatable="false">2017</string>
    <string name="modelo2018" translatable="false">2018</string>
    <string-array name="modelos">
        <item>@string/modelo2016</item>
        <item>@string/modelo2017</item>
        <item>@string/modelo2018</item>
    </string-array>
    <string name="itemVacio">[Pick a Item]</string>
    <string name="errPlaca">License plate is required</string>
    <string name="errMarca">Please pick Brand for the car</string>
    <string name="errModelo">You must pick a Model</string>
    <string name="errPrecio">Car price is required</string>
    <string name="msjCarro">Car created successfully</string>
    <string name="msjCarroEdit">Car editing complete</string>
    <string name="errPlacaRep">License plate already registered!</string>
    <string name="elimTitulo">Delete Car</string>
    <string name="elimMsj">You are about to delete this car, ¿do you wish to continue?</string>
    <string name="Si">Yes</string>
    <string name="No">No</string>
</resources>
